@@ -747,7 +747,13 @@ class CImportReferencer {
 			$allowedTriggers = API::Trigger()->get(array(
 				'triggerids' => $triggerIds,
 				'output' => array('triggerid'),
-				'filter' => array('flags' => array(ZBX_FLAG_DISCOVERY_NORMAL, ZBX_FLAG_DISCOVERY_PROTOTYPE)),
+				'filter' => array(
+					'flags' => array(
+						ZBX_FLAG_DISCOVERY_NORMAL,
+						ZBX_FLAG_DISCOVERY_CHILD,
+						ZBX_FLAG_DISCOVERY_CREATED
+					)
+				),
 				'editable' => true,
 				'preservekeys' => true
 			));
